crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__can_render_for.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: output
---
function create_0_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e1 = document.createTextNode(ctx[0]);
const e2 = document.createTextNode(" ");
mount(target, e1, anchor);
mount(target, e2, anchor);
return {
u(dirty) {
},
d() {
e1.parentNode.removeChild(e1);
e2.parentNode.removeChild(e2);
}
};
}
const elems = {"0":replace(document.getElementById("0")),"0_block":[],};
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __init_ctx() {
  return [undefined];
}
const ctx = __init_ctx();
function __update(dirty, initial) {
  let i = 0; for (const v of ([1, 2, 3])) { ctx[0] = v; if (i >= elems["0_block"].length) { elems["0_block"][i] = create_0_block(elems["0"].parentNode, elems["0"]); } elems["0_block"][i].u(dirty); i += 1; } elems["0_block"].slice(i).forEach((b) => b.d()); elems["0_block"].length = i;
}
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);

---
<span id="0"></span>
