crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__can_render_if_else-2.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: output
---
let x = 0;
function create_0_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e1 = document.createTextNode("wow ");
mount(target, e1, anchor);
return {
u(dirty) {
},
d() {
e1.parentNode.removeChild(e1);
}
};
}
function create_0_else_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
const e2 = document.createTextNode("wow!! ");
mount(target, e2, anchor);
return {
u(dirty) {
},
d() {
e2.parentNode.removeChild(e2);
}
};
}
const elems = {"0":replace(document.getElementById("0")),"0_block":null,"0_on":true,};
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __update(dirty, initial) {
  if (x == 0) {
    if (elems["0_block"] && elems["0_on"]) {
        elems["0_block"].u(dirty);
    } else {
        elems["0_on"] = true;
        elems["0_block"]?.d();
        elems["0_block"] = create_0_block(elems["0"].parentNode, elems["0"]);
    }
} else if (elems["0_on"]) {
    elems["0_on"] = false;
    elems["0_block"]?.d();
    elems["0_block"] = create_0_else_block(elems["0"].parentNode, elems["0"]);
}

}
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);

---
<span id="0"></span>
