crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__multiple_variables_are_properly_in_dirty_buffer.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: output
---
const dirty = new Uint8Array(new ArrayBuffer(1));
const elems = {"1":replace(document.getElementById("1")),"3":replace(document.getElementById("3")),"5":replace(document.getElementById("5")),"6":document.getElementById("6"),};
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __init_ctx() {
  let __closure2 = () => { __schedule_update(0, x = 3); __schedule_update(1, y = 3); };
  let x = 0;
  let y = 0;
  elems["6"].addEventListener("click", () => { __schedule_update(0, x = 3); __schedule_update(1, y = 3); });
  return [x,y,__closure2];
}
const ctx = __init_ctx();
let updating = false;
function __update(dirty, initial) {
  if (dirty[0] & 1) elems[1].data = ctx[0];
  if (dirty[0] & 2) elems[3].data = ctx[1];
  if (dirty[0] & 3) elems[5].data = ctx[0] + ctx[1];
}
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);
function __schedule_update(ctx_idx, val) {
  ctx[ctx_idx] = val;
  dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
  if (updating) return;
  updating = true;
  Promise.resolve().then(() => {
    __update(dirty, false);
    updating = false;
    dirty.fill(0);
  });
}

---
<p><span id="1"></span> and <span id="3"></span> and <span id="5"></span></p><button id="6">Hi</button>
